--- a/MapTool/MapTool/MapTool.vcxproj.filters
+++ b/MapTool/MapTool/MapTool.vcxproj.filters
@@ -30,10 +30,13 @@
     <ClCompile Include="CBaseWnd.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="CImage.cpp">
+    <ClCompile Include="CSprite.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="CFileManager.cpp">
+    <ClCompile Include="CResourceManager.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="CMouse.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
@@ -50,10 +53,13 @@
     <ClInclude Include="CBaseWnd.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="CImage.h">
+    <ClInclude Include="CSprite.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="CFileManager.h">
+    <ClInclude Include="CResourceManager.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="CMouse.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
