--- a/MapTool/MapTool/MapTool.vcxproj.filters
+++ b/MapTool/MapTool/MapTool.vcxproj.filters
@@ -62,5 +62,8 @@
     <ClInclude Include="CMouse.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="Settings.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
