--- a/MapTool/MapTool/MapTool.vcxproj.filters
+++ b/MapTool/MapTool/MapTool.vcxproj.filters
@@ -65,5 +65,13 @@
     <ClInclude Include="Settings.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="resource.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="MapTool.rc">
+      <Filter>리소스 파일</Filter>
+    </ResourceCompile>
   </ItemGroup>
 </Project>
