--- a/MapTool/MapTool/MapTool.vcxproj
+++ b/MapTool/MapTool/MapTool.vcxproj
@@ -127,6 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Board.cpp" />
     <ClCompile Include="CApp.cpp" />
     <ClCompile Include="CBaseWnd.cpp" />
     <ClCompile Include="CCore.cpp" />
@@ -137,6 +138,7 @@
     <ClCompile Include="MapTool.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Board.h" />
     <ClInclude Include="CApp.h" />
     <ClInclude Include="CBaseWnd.h" />
     <ClInclude Include="CCore.h" />
