--- a/MapTool/MapTool/MapTool.vcxproj
+++ b/MapTool/MapTool/MapTool.vcxproj
@@ -135,6 +135,7 @@
     <ClCompile Include="CSprite.cpp" />
     <ClCompile Include="CResourceManager.cpp" />
     <ClCompile Include="CMouse.cpp" />
+    <ClCompile Include="FileManager.cpp" />
     <ClCompile Include="MapTool.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -146,6 +147,7 @@
     <ClInclude Include="CSprite.h" />
     <ClInclude Include="CResourceManager.h" />
     <ClInclude Include="CMouse.h" />
+    <ClInclude Include="FileManager.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="Settings.h" />
   </ItemGroup>
