--- a/MapTool/MapTool/MapTool.vcxproj
+++ b/MapTool/MapTool/MapTool.vcxproj
@@ -128,6 +128,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Board.cpp" />
+    <ClCompile Include="Camera.cpp" />
     <ClCompile Include="CApp.cpp" />
     <ClCompile Include="CBaseWnd.cpp" />
     <ClCompile Include="CCore.cpp" />
@@ -140,6 +141,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Board.h" />
+    <ClInclude Include="Camera.h" />
     <ClInclude Include="CApp.h" />
     <ClInclude Include="CBaseWnd.h" />
     <ClInclude Include="CCore.h" />
