--- a/MapTool/MapTool/MapTool.vcxproj
+++ b/MapTool/MapTool/MapTool.vcxproj
@@ -131,6 +131,7 @@
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="CApp.cpp" />
     <ClCompile Include="CBaseWnd.cpp" />
+    <ClCompile Include="CBitmap.cpp" />
     <ClCompile Include="CCore.cpp" />
     <ClCompile Include="CEditWnd.cpp" />
     <ClCompile Include="CSprite.cpp" />
@@ -144,6 +145,7 @@
     <ClInclude Include="Camera.h" />
     <ClInclude Include="CApp.h" />
     <ClInclude Include="CBaseWnd.h" />
+    <ClInclude Include="CBitmap.h" />
     <ClInclude Include="CCore.h" />
     <ClInclude Include="CEditWnd.h" />
     <ClInclude Include="CSprite.h" />
